--- a/l5/css/main.css
+++ b/l5/css/main.css
@@ -1,8 +1,70 @@
 /* xs */
+* {
+    box-sizing: border-box;
+}
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
 body {
     background:url(../images/pattern.jpg);
 }
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 
+}
+.page-header {
+    color: white;
+    position: relative;
+    display: flex; 
+}
+.items-wrapper {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.item {
+    height: 150px;
+    padding: 0.5rem
+}
+.item__content {
+    height: 100%;
+    position: relative;
+}
+.item:nth-child(1) 
+.item__content{
+    background-color: #3387ea;
+}
+.item:nth-child(2) 
+.item__content{
+    background-color: #f9be3e;
+}
+.item:nth-child(3) 
+.item__content{
+    background-color: #d3573e;
+}
+.item:nth-child(4) 
+.item__content{
+    background-color: #59b0e2;
+}
+.item:nth-child(5) 
+.item__content{
+    background-color: #33af95;
+}
+.item:nth-child(6) 
+.item__content{
+    background-color: #86a73f;
+}
+.item:nth-child(7) 
+.item__content{
+    background-color: #151a26;
+}
+.item:nth-child(8) 
+.item__content{
+    background-color: #7e5b8c;
+}
 @media (min-width: 768px) {
 /* sm */
 }
