--- a/l5/css/main.css
+++ b/l5/css/main.css
@@ -5,6 +5,7 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    color: white;
 }
 body {
     background:url(../images/pattern.jpg);
@@ -16,7 +17,6 @@ body {
 
 }
 .page-header {
-    color: white;
     position: relative;
     display: flex; 
 }
@@ -64,6 +64,38 @@ body {
 .item:nth-child(8) 
 .item__content{
     background-color: #7e5b8c;
+}
+.item__image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.item__text {
+    position: absolute;
+    top: 80%;
+    left: 5%;
+}
+.blog {
+    display: flex;
+    flex-direction: row;
+}
+.blog__image {
+    width: 30%;
+    overflow: hidden;
+}
+.blog__image >img{
+    height: 100%;
+}
+.blog__header {
+    padding-bottom: 20px;
+    padding-top: 35px;
+    padding-left: 10px;
+    font-weight: bold;
+    font-size: 17px;
+}
+.blog__paragraph {
+    padding-left: 10px;
 }
 @media (min-width: 768px) {
 /* sm */
